# Permisos

./: .env  Cargo.toml
handlers/: auth_handler.rs  modulo_handler.rs  perfil_handler.rs  permisos_handler.rs  principal_handler.rs
middleware/: jwt_middleware.rs  permission_middleware.rs
src/: db.rs  main.rs
src/handlers/: auth_handler.rs  menu_handler.rs  mod.rs  modulo_handler.rs  perfil_handler.rs  permisos_handler.rs  usuario_handler.rs
src/middleware/: jwt_middleware.rs  mod.rs  permission_middleware.rs
src/models/: menu.rs  mod.rs  modulo.rs  perfil.rs  permisos.rs  usuario.rs
src/utils/: email.rs  hash.rs  jwt.rs  mod.rs  recaptcha.rs
static/: login.html  menu.html  perfil.html  permisos.html  usuario.html
static/css/: styles.css
static/js/: auth.js  config.js  fetchAuth.js  menu.js  perfil.js  permisos.js  usuario.js  utils.js
