[package]
name = "actix-permisos"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-cors = "0.7"
actix-files = "0.6"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros","tls-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
futures = "0.3"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = "0.4"
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
lettre_email = "0.9"
dotenv = "0.15"